# Rust_MVC

./: Cargo.toml  README.md
src/: app.rs  lib.rs  stdweb_calls.rs
src/components/: comming_soon.rs  mod.rs  navbar.rs  tabs_level_1.rs  todo.rs  welcome.rs
src/components/snippets/: mod.rs  welcome.rs
static/: BUILDER.html  index.html  materialize.css
static/css/: johns.css  materialize.css  tabs.css
