[package]
name = "valknut_engine"
version = "0.1.0"
authors = ["John <johnwalton@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.8.0"
#yew-macro = "0.8.0"

#actix = "0.8.3"
#actix-web = "1.0.5"

serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"

strum = "0.15.0"
strum_macros = "0.15.0"

failure = "0.1.5"

stdweb = "0.4.18"

toml = "0.5.3"



#pulldown-cmark = "0.1.2"
#tungstenite = "0.9.1"
